  have an include path set on your template object, it will look in all those
  paths for foo/bar.html. If you use relative paths, for example
  if you include "../foo/bar.html" AND have an include path set, you will now
  have a problem, because you can't mix both approaches, otherwise you should
  be fine, so to fix this you should convert your relative includes/extends
+ API: Added Dwoo_Compilation_Exception methods getCompiler() and
  getTemplate() so you can catch the exception and use those to build a nicer
  error view with all the details you want
* The Compiler now ensures that a template starting with <?xml will not
  conflict with php using the short_open_tag=On setting
* Complex arrays keys can be read using {$var["Long|Key*With.some)Crap"]},
  however since it is really bad practice I won't spend time fixing edge
  cases, which are $ and '/" characters inside the string. Those will break
  it and that's it.. if you really care feel free to send a patch
* Dwoo->get() is now stricter as to what it accepts as a "template", only
  Dwoo_ITemplate objects or valid filenames are accepted
* Foreach and other similar plugins that support "else" now only count()
  their input before processing when an else block follows
* Various optimizations
* Fixed compiler bug that created a parse error when you had comments in an
  extended template
* Fixed extends bug when extending files in other directories using relative
  paths
* Fixed parsing bug with "|modifier:param|modifier2} with:colon after it"
* Bug fixed with smarty functions called with no parameters (in compat mode)
* Fixed Dwoo::isArray() check, objects implementing ArrayAccess are now
  valid (thanks to Daniel Cousineau for the patch)
* Fixed compiler warning when doing {func()->method()} or {func()->property}
* Fixed compiled/cached files being written in the wrong place when the path
  to the template contains "../"s
* Fixed {if} failing with conditions using upper case operators (i.e. AND)
