@@ -1,0 +1,22 @@
+// ------------------------
+// Install notes :
+// ------------------------
+
+ - drop dwoo's directory in app/lib/renderer (create if needed)
+
+ - add a renderer to app/config/output_types.xml as such :
+    <renderer name="dwoo" class="DwooRenderer">
+       <parameter name="assigns">
+          <parameter name="routing">ro</parameter>
+          <parameter name="request">rq</parameter>
+          <parameter name="controller">ct</parameter>
+          <parameter name="user">us</parameter>
+          <parameter name="translation_manager">tm</parameter>
+          <parameter name="request_data">rd</parameter>
+       </parameter>
+       <parameter name="extract_vars">true</parameter>
+       <parameter name="plugin_dir">%core.lib_dir%/dwoo_plugins</parameter>
+    </renderer>
+
+ - add the renderer to app/config/autoload.xml as such :
+    <autoload name="DwooRenderer">%core.lib_dir%/renderer/dwoo/Dwoo/Adapter/Agavi/DwooRenderer.php</autoload>
